# branch-by-branch

./: .envrc  .gitignore  README.md  go.mod  go.sum  journal.txt  justfile  shell.nix  test.json
.devcontainer/: devcontainer.json
byb-rl/: deepspeed_gpt.py  deepspeed_torch_basic.py  job.py  main.py  pyproject.toml  submit.py
compilation/: Dockerfile  execution.py  run_compilation.sh
etc/: misc-help.md  routing-server-setup.md
execution/: Dockerfile  execution.py  requirements.txt  run_execution.sh
goals/: examples.lean  goalfile.json
inference/: inference.py  requirements.txt  run_inference.sh
lean_corelib/: Corelib.lean  Main.lean  Test.lean  lake-manifest.json  lakefile.toml
lean_playground/: LeanPlayground.lean  Main.lean  README.md  lake-manifest.json  lakefile.toml
orchestrator/: action-execution.go  cmd.go  copy-file.go  engine.go  goal.go  golden.go  graph-data-extraction.go  graph-slice.go  graph.go  graph_data_extraction_test.go  ids.go  inference.go  lean-output-parsing.go  main.go  message-list.go  model-tree.go  orchestrator-training.go  orchestrator-web.go  orchestrator.go  playground.go  prompt.go  prompt_test.go  quickfunc.go  redis.go  router.go  xmlparsing.go  xmlparsing_test.go
scripts/: advantagetest.py  lambda-cache-tmpfs.sh  lambda-link-cache.sh  lambda-mkswap.sh  lambda-setup.sh  lambda-start-inference.sh  lambda-start-training.sh  o  push-to-lambda.sh  rclone-model.sh  rclone-push.sh  rclone.sh  redis  strip-attribution.sh
training/: finetune.py  foo.ts  init_qpissa.py  requirements.txt  run_training.sh  training.py  (+1 more)
(+462 files in other folders)
