[project]
name = "byb-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "deepspeed>=0.17.5",
    "pandas",
    "pyarrow",
    "ray[default]==2.49.0",
    "torchmetrics>=1.8.1",
    "vllm==0.10.0",
]
